# WiPi-Guardian

./: .gitignore  install.sh  pyproject.toml  requirements.txt
configs/: wids.example.yaml
src/wids/: alerts.py  common.py  db.py
src/wids/capture/: live.py
src/wids/detectors/: rogue_ap.py
src/wids/ie/: rsn.py
src/wids/scripts/: replay.py
src/wids/sensor/: main.py
src/wids/service/: api.py
src/wids_pi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ui/: index.html  package.json  tailwind.config.cjs  vite.config.js
ui/src/: App.svelte  app.css  main.js
ui/src/lib/: api.js
ui/src/routes/: Alerts.svelte  Defense.svelte  Overview.svelte
